--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -14,196 +14,179 @@
             <!-- Wrapper for slides -->
             <ul class="slides">
               <li>
-                <h3 class="subheading">April 2019</h3>
+                <h3 class="subheading">May 2019</h3>
                 <ul class="menu-list">
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Chicken Flautas.JPG"
-                      alt="Chicken Flautas"
+                      src="/Menu-Images/2019-05/web_Chicken Burrito Bowls.JPG"
+                      alt="Chicken Burrito Bowls"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Chicken Flautas</h4>
+                      <h4>Chicken Burrito Bowls</h4>
                       <p>
-                        My favorite Mexican(ish) meal! Cheesy, seasoned chicken
-                        wrapped in flour tortillas and baked or fried. (Crockpot
-                        then baked or fried)
+                        Shredded chicken and veggies top rice for a quick and
+                        delicious dinner. (Slow Cooker)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Cheesy Chicken and Rice.JPG"
-                      alt="Cheesy Chicken and Rice"
+                      src="/Menu-Images/2019-05/web_Honey Chicken Tenders.JPG"
+                      alt="Honey Chicken Tenders"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Cheesy Chicken and Rice</h4>
+                      <h4>Honey Chicken Tenders</h4>
                       <p>
-                        Delicious chicken, veggie and rice dish. A one pot dish
-                        that covers all the bases! (Stovetop)
+                        Sweet chicken tenders baked to perfection. Comes with
+                        veggies. (Oven)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Lemon Turkey with Green Beans.JPG"
-                      alt="Lemon Turkey with Green Beans"
+                      src="/Menu-Images/2019-05/web_Mediterranean Turkey Burger.JPG"
+                      alt="Mediterranean Turkey Burger"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Lemon Turkey with Green Beans</h4>
+                      <h4>Mediterranean Turkey Burger</h4>
                       <p>
-                        Sliced turkey breast and green beans tossed with a
-                        citrus pan sauce. A great way to have turkey not at
-                        Thanksgiving. (Stovetop)
+                        Juicy turkey burger mixed with spinach, sun dried
+                        tomatoes, and feta. Comes with buns and veggies. (Grill
+                        or stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Carnitas.JPG"
-                      alt="Carnitas"
+                      src="/Menu-Images/2019-05/web_Balsamic Honey Pulled Pork.JPG"
+                      alt="Balsamic Honey Pulled Pork"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Carnitas</h4>
+                      <h4>Balsamic Honey Pulled Pork</h4>
                       <p>
-                        Slow cooked deliciousness is the best way to describe
-                        thee amazing tacos. Pork is slow cooked all day then
-                        broiled or pan fried to get crispy edges. My favorite
-                        way to make tacos! (Slow cooker then oven or stovetop)
+                        Pulled pork mixed with a sweet and tangy bbq sauce.
+                        Comes with veggies. (Slow cooker)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Creamy Tuscan Tortellini.JPG"
-                      alt="Creamy Tuscan Tortellini"
+                      src="/Menu-Images/2019-05/web_Jalapeno Pineapple Pork Tacos.JPG"
+                      alt="Jalapeno Pineapple Pork Tacos"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Creamy Tuscan Tortellini</h4>
+                      <h4>Jalapeno Pineapple Pork Tacos</h4>
                       <p>
-                        Sausage and tortellini in a creamy tomato sauce,
-                        finished with a handful of spinach. (Stovetop)
+                        Sweet and spicy pork tacos. Fresh flavors ready when you
+                        need it! Comes with corn tortillas and cheese. (Slow
+                        cooker)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Cuban Sandwiches.JPG"
-                      alt="Cuban Sandwiches"
+                      src="/Menu-Images/2019-05/web_Italian Pork Roast.JPG"
+                      alt="Italian Pork Roast"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Cuban Sandwiches</h4>
+                      <h4>Italian Pork Roast</h4>
                       <p>
-                        Back by popular demand! Pork is slow cooked with citrus
-                        and herbs all day. Add ham and Swiss and you have an
-                        amazing sandwich. (Slow cooker)
+                        Pork roast slow cooked with herbs and tomatoes. Smells
+                        amazing and tastes great! Comes with veggies. (Crockpot)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Sriracha and Cheddar Juicy Lucy.JPG"
-                      alt="Sriracha and Cheddar Juicy Lucy"
+                      src="/Menu-Images/2019-05/web_Pizza Burgers.JPG"
+                      alt="Pizza Burgers"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Sriracha and Cheddar Juicy Lucy</h4>
+                      <h4>Pizza Burgers</h4>
                       <p>
-                        Cheddar stuffed burgers with a little (optional) kick.
-                        Comes with buns and veggies. (Grilled or stovetop)
+                        Homemade burgers that are good grilled or pan cooked.
+                        Topped with mozzarella, pepperoni, and marinara. Comes
+                        with buns and veggies. (Grilled or stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Italian Beef Sandwiches.JPG"
-                      alt="Italian Beef Sandwiches"
+                      src="/Menu-Images/2019-05/web_Philly Stuffed Peppers.JPG"
+                      alt="Philly Stuffed Peppers"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Italian Beef Sandwiches</h4>
+                      <h4>Philly Stuffed Peppers</h4>
                       <p>
-                        My take on a Chicago favorite. Slow cooked beef is made
-                        into amazing sandwiches. Comes with rolls and veggies.
-                        (Slow cooker)
+                        Bell peppers stuffed with beef and onions then topped
+                        with provolone. (Stovetop then Bake)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-04/web_Sweet Potato and Chickpea Curry.JPG"
-                      alt="Sweet Potato and Chickpea Curry"
+                      src="/Menu-Images/2019-05/web_Sloppy Joes.JPG"
+                      alt="Sloppy Joes"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Sweet Potato and Chickpea Curry</h4>
+                      <h4>Sloppy Joes</h4>
                       <p>
-                        An amazing vegetarian curry finished with fresh spinach
-                        and coconut milk. Comes with rice. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-04/web_Baked Oatmeal.JPG"
-                      alt="Baked Oatmeal"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Baked Oatmeal</h4>
-                      <p>
-                        Oatmeal is mixed with blueberries and peaches then
-                        baked. One of my favorite quick and easy breakfasts. (Baked)
+                        Ground beef is mixed with veggies, spices and tomato
+                        sauce for the best homemade Sloppy Joes. It is a great
+                        update on a classic. Comes with veggies and buns.
+                        (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
                     <!-- <img
-                      src="/Menu-Images/2019-04/web_Stir Fried Quinoa and Veggies.JPG"
-                      alt="Stir Fried Quinoa and Veggies"
+                      src="/Menu-Images/2019-05/web_Pasta Primavera.JPG"
+                      alt="Pasta Primavera"
                       class="menu-image"
                     /> -->
                     <div>
-                      <h4>Stir Fried Quinoa and Veggies</h4>
+                      <h4>Pasta Primavera</h4>
                       <p>
-                        A new twist of fried rice. Quinoa is fried with veggies
-                        and eggs. (Stovetop)
+                        A fresh spring pasta filled with veggies. A great way to
+                        enjoys spring’s bounty. (Stovetop)
                       </p>
                     </div>
                   </li>
 
                   <li>
-<!--                    <img
-                      src="/Menu-Images/2019-04/web_Ham and Cheese Pot Pie.JPG"
-                      alt="Ham and Cheese Pot Pie"
+                    <!-- <img
+                      src="/Menu-Images/2019-05/web_Caprese Risotto.JPG"
+                      alt="Caprese Risotto"
                       class="menu-image"
                     /> -->
                     <div>
-                      <h4>Ham and Cheese Pot Pie</h4>
+                      <h4>Caprese Risotto</h4>
                       <p>
-                        Creamy ham and Swiss filling is topped puff pastry to
-                        create a quick and filling pot pie. (Stove top then
-                        baked)
+                        Creamy risotto is mixed with pesto, tomatoes, and fresh
+                        mozzarella. It is a delicious and quick spring dinner.
+                        (Stovetop)
                       </p>
                     </div>
                   </li>
-
                 </ul>
               </li>
             </ul>
