Additional May 2019 Menu Images

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -158,11 +158,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                       src="/Menu-Images/2019-05/web_Pasta Primavera.JPG"
                       alt="Pasta Primavera"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>Pasta Primavera</h4>
                       <p>
@@ -173,11 +173,11 @@
                   </li>
 
                   <li>
-                    <!-- <img
+                    <img
                       src="/Menu-Images/2019-05/web_Caprese Risotto.JPG"
                       alt="Caprese Risotto"
                       class="menu-image"
-                    /> -->
+                    />
                     <div>
                       <h4>Caprese Risotto</h4>
                       <p>
