--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -189,6 +189,169 @@
                   </li>
                 </ul>
               </li>
+
+              <li>
+                <h3 class="subheading">June 2019</h3>
+                <ul class="menu-list">
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Limoncello Chicken.JPG"
+                      alt="Limoncello Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Limoncello Chicken</h4>
+                      <p>Herby, garlicky, lemony grilled chicken and onions. Served with veggies. (Grilled)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Turkey Pesto Burger.JPG"
+                      alt="Turkey Pesto Burger"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Turkey Pesto Burger</h4>
+                      <p>Mix together turkey and pesto for a juicy, flavorful burger.  Served with fresh mozzarella, buns and veggies.  (Grilled)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Chicken Fajitas.JPG"
+                      alt="Chicken or Portobello Fajitas"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Chicken or Portobello Fajitas</h4>
+                      <p>Chicken marinated in fresh squeezed juices and seasonings then grilled with peppers and onions for the best fajitas! Comes with tortillas. (Grilled)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Chicken Fried Cauli-Rice.JPG"
+                      alt="Chicken Fried Cauli-rice"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Chicken Fried Cauli-rice</h4>
+                      <p>Get extra veggies in this tasty take on fried rice. (Stovetop)  
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Mozzarella Stuffed Meatball Burger.JPG"
+                      alt="Mozzarella Stuffed Meatball Burgers"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Mozzarella Stuffed Meatball Burgers</h4>
+                      <p>Beef and Italian sausage burger seasoned and stuffed with mozzarella.  Comes with marinara, awesome bread, and veggies. (Grilled)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Puerto Rican Shredded Pork with Black Beans.JPG"
+                      alt="Puerto Rican Shredded Pork with Black Beans"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Puerto Rican Shredded Pork with Black Beans</h4>
+                      <p>Juicy, citrus marinated pork served with corn tortillas and black beans. (Crockpot)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Pork Egg Roll Bowl.JPG"
+                      alt="Pork Egg Roll Bowl"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Pork Egg Roll Bowl</h4>
+                      <p>All the best parts of eggrolls and none of the mess! Ground pork and veggies topped with crispy wonton strips. (Stovetop) 
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Veggie Loaded Black Beans and Rice.JPG"
+                      alt="Veggie Loaded Black Beans and Rice"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Veggie Loaded Black Beans and Rice</h4>
+                      <p>Black beans and rice like you have never had them before! It is a great vegan meal. (Stovetop) 
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Pasta with Chickpeas and Garlic Sauce.JPG"
+                      alt="Pasta with Chickpea and Garlic Sauce"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Pasta with Chickpea and Garlic Sauce</h4>
+                      <p>One of my favorite vegan pasta meals. A delicious creamy chickpea sauce is tossed with pasta and cherry tomatoes. (Stovetop) 
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-06/web_Sweet Potato and Quinoa Salad.JPG"
+                      alt="Grilled Sweet Potato and Quinoa Salad"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Grilled Sweet Potato and Quinoa Salad</h4>
+                      <p>A great summer salad. Grilled sweet potatoes are tossed with quinoa, greens, and dried cranberries. (Grill and stovetop)
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!--<img
+                      src="/Menu-Images/2019-06/web_Italian Joes.JPG"
+                      alt="Italian Joes Sloppy Joes"
+                      class="menu-image"
+                    />-->
+                    <div>
+                      <h4>Italian Joes</h4>
+                      <p>Sloppy Joes’ Italian cousin. A blend of beef, Italian sausage and pepperoni are simmered in an Italian flavored sauce. Comes with veggies, buns and mozzarella. (Stovetop) 
+                      </p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <!-- <img
+                      src="/Menu-Images/2019-06/web_Garlic Butter Flank Steak.JPG"
+                      alt="Garlic Butter Flank Steak"
+                      class="menu-image"
+                    /> -->
+                    <div>
+                      <h4>Garlic Butter Flank Steak</h4>
+                      <p>This is the perfect meal for your grill. Seasoned flank steak is finished with an herby, garlicky butter sauce. Throw the veggies on the grill next to the steak and it will be a perfect summer meal. (Grill) 
+                      </p>
+                    </div>
+                  </li>
+
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
