Added Italian Joes menu image

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -325,11 +325,11 @@
                   </li>
 
                   <li>
-                    <!--<img
+                    <img
                       src="/Menu-Images/2019-06/web_Italian Joes.JPG"
                       alt="Italian Joes Sloppy Joes"
                       class="menu-image"
-                    />-->
+                    />
                     <div>
                       <h4>Italian Joes</h4>
                       <p>Sloppy Joes’ Italian cousin. A blend of beef, Italian sausage and pepperoni are simmered in an Italian flavored sauce. Comes with veggies, buns and mozzarella. (Stovetop) 
