Renamed Pizza Joes

--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -326,12 +326,12 @@
 
                   <li>
                     <img
-                      src="/Menu-Images/2019-06/web_Italian Joes.JPG"
-                      alt="Italian Joes Sloppy Joes"
+                      src="/Menu-Images/2019-06/web_Pizza Joes.JPG"
+                      alt="Pizza Joes"
                       class="menu-image"
                     />
                     <div>
-                      <h4>Italian Joes</h4>
+                      <h4>Pizza Joes</h4>
                       <p>Sloppy Joes’ Italian cousin. A blend of beef, Italian sausage and pepperoni are simmered in an Italian flavored sauce. Comes with veggies, buns and mozzarella. (Stovetop) 
                       </p>
                     </div>
