--- a/themes/dinnerdelights/layout/_partial/menu.ejs
+++ b/themes/dinnerdelights/layout/_partial/menu.ejs
@@ -13,182 +13,6 @@
           <div id="menu-carousel" class="flexslider">
             <!-- Wrapper for slides -->
             <ul class="slides">
-              <li>
-                <h3 class="subheading">May 2019</h3>
-                <ul class="menu-list">
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Chicken Burrito Bowls.JPG"
-                      alt="Chicken Burrito Bowls"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Chicken Burrito Bowls</h4>
-                      <p>
-                        Shredded chicken and veggies top rice for a quick and
-                        delicious dinner. (Slow Cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Honey Chicken Tenders.JPG"
-                      alt="Honey Chicken Tenders"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Honey Chicken Tenders</h4>
-                      <p>
-                        Sweet chicken tenders baked to perfection. Comes with
-                        veggies. (Oven)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Mediterranean Turkey Burger.JPG"
-                      alt="Mediterranean Turkey Burger"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Mediterranean Turkey Burger</h4>
-                      <p>
-                        Juicy turkey burger mixed with spinach, sun dried
-                        tomatoes, and feta. Comes with buns and veggies. (Grill
-                        or stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Balsamic Honey Pulled Pork.JPG"
-                      alt="Balsamic Honey Pulled Pork"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Balsamic Honey Pulled Pork</h4>
-                      <p>
-                        Pulled pork mixed with a sweet and tangy bbq sauce.
-                        Comes with veggies. (Slow cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Jalapeno Pineapple Pork Tacos.JPG"
-                      alt="Jalapeno Pineapple Pork Tacos"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Jalapeno Pineapple Pork Tacos</h4>
-                      <p>
-                        Sweet and spicy pork tacos. Fresh flavors ready when you
-                        need it! Comes with corn tortillas and cheese. (Slow
-                        cooker)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Italian Pork Roast.JPG"
-                      alt="Italian Pork Roast"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Italian Pork Roast</h4>
-                      <p>
-                        Pork roast slow cooked with herbs and tomatoes. Smells
-                        amazing and tastes great! Comes with veggies. (Crockpot)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Pizza Burgers.JPG"
-                      alt="Pizza Burgers"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Pizza Burgers</h4>
-                      <p>
-                        Homemade burgers that are good grilled or pan cooked.
-                        Topped with mozzarella, pepperoni, and marinara. Comes
-                        with buns and veggies. (Grilled or stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Philly Stuffed Peppers.JPG"
-                      alt="Philly Stuffed Peppers"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Philly Stuffed Peppers</h4>
-                      <p>
-                        Bell peppers stuffed with beef and onions then topped
-                        with provolone. (Stovetop then Bake)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Sloppy Joes.JPG"
-                      alt="Sloppy Joes"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Sloppy Joes</h4>
-                      <p>
-                        Ground beef is mixed with veggies, spices and tomato
-                        sauce for the best homemade Sloppy Joes. It is a great
-                        update on a classic. Comes with veggies and buns.
-                        (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Pasta Primavera.JPG"
-                      alt="Pasta Primavera"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Pasta Primavera</h4>
-                      <p>
-                        A fresh spring pasta filled with veggies. A great way to
-                        enjoys spring’s bounty. (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-
-                  <li>
-                    <img
-                      src="/Menu-Images/2019-05/web_Caprese Risotto.JPG"
-                      alt="Caprese Risotto"
-                      class="menu-image"
-                    />
-                    <div>
-                      <h4>Caprese Risotto</h4>
-                      <p>
-                        Creamy risotto is mixed with pesto, tomatoes, and fresh
-                        mozzarella. It is a delicious and quick spring dinner.
-                        (Stovetop)
-                      </p>
-                    </div>
-                  </li>
-                </ul>
-              </li>
 
               <li>
                 <h3 class="subheading">June 2019</h3>
@@ -352,6 +176,170 @@
 
                 </ul>
               </li>
+
+              <li>
+                <h3 class="subheading">July 2019</h3>
+                <ul class="menu-list">
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Grilled Maple Bacon Chicken Sandwiches.JPG"
+                      alt="Grilled Maple Bacon Chicken Sandwiches"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Grilled Maple Bacon Chicken Sandwiches</h4>
+                      <p>Chicken and bacon are grilled to perfection then piled on rolls with Swiss cheese and a delicious Dijon sauce. Comes with rolls and veggies. (Grill)</p>
+                    </div>
+                  </li> 
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Western Chicken Burger.JPG"
+                      alt="Western Chicken Burger"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Western Chicken Burger</h4>
+                      <p>Chicken mixed with cheddar, jalapeno, and bacon. Comes with veggies and buns. (Grilled)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Lemon Pesto Chicken.jpg"
+                      alt="Lemon Pesto Chicken"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Lemon Pesto Chicken</h4>
+                      <p>Chicken marinated in the bright flavors of summer! Comes with veggies. (Grilled)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Pork Chops with Blueberry Bourbon BBQ Sauce.JPG"
+                      alt="Pork Chops with Blueberry Bourbon BBQ Sauce"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Pork Chops with Blueberry Bourbon BBQ Sauce</h4>
+                      <p>The most amazing BBQ sauce ever! I serve it with everything, but it is especially tasty with grilled pork chops. Comes with veggies. (Grilled and stovetop)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Chile Rubbed Pork Chops.JPG"
+                      alt="Chile Rubbed Pork Chops with Black Bean Salad"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Chile Rubbed Pork Chops with Black Bean Salad</h4>
+                      <p>Grilled, spiced pork chops served with a grilled veggie salad. (Grill)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Tacos al Pastor.JPG"
+                      alt="Tacos al Pastor"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Tacos al Pastor</h4>
+                      <p>Tender pork slow cooked for the perfect tacos. Comes with tortillas. (Slow cooker)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Hawaiian Burgers.JPG"
+                      alt="Hawaiian Burgers"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Hawaiian Burgers</h4>
+                      <p>Ham and pineapple come together for a great summer burger! Comes with buns and veggies. (Grill)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Carne Asada.JPG"
+                      alt="Carne Asada"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Carne Asada</h4>
+                      <p>Flank steak is marinated then grilled to perfection to make great summertime tacos. Comes with corn tortillas. (Grilled)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Cheddar Bacon Ranch Burger.JPG"
+                      alt="Cheddar Bacon Ranch Burger"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Cheddar Bacon Ranch Burger</h4>
+                      <p>Mix bacon, cheddar and ranch into beef to create the juiciest burgers! Comes with buns and veggies. (Grill)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Broccoli Beef.JPG"
+                      alt="Broccoli Beef"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Broccoli Beef</h4>
+                      <p>Beef cooked in a savory sauce. Served with broccoli and rice. (Stovetop)</p>
+                    </div>
+                  </li> 
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Veggie Pasta.JPG"
+                      alt="Veggie Pasta"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Veggie Pasta</h4>
+                      <p>A one pot pasta dish filled with seasonal veggies! (Stovetop)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Three Sisters Enchilada Bowls.JPG"
+                      alt="Three Sisters Enchilada Bowls"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Three Sisters Enchilada Bowls</h4>
+                      <p>Squash, beans and corn fill this amazing enchilada bowl! (Stovetop)</p>
+                    </div>
+                  </li>
+
+                  <li>
+                    <img
+                      src="/Menu-Images/2019-07/web_Spicy Thai Noodles.JPG"
+                      alt="Spicy Thai Noodles"
+                      class="menu-image"
+                    />
+                    <div>
+                      <h4>Spicy Thai Noodles</h4>
+                      <p>Veggie filled rice noodles are tossed with a spicy sauce. (Stovetop)</p>
+                    </div>
+                  </li>
+
+                </ul>
+              </li>
+
             </ul>
           </div>
         </div>
